# FastapiBaseTemplate

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
api/: api.py
